[WebPayments] Correcting shade of blue for settings link

Bug: 752227
Change-Id: Ic17fb47b8b612b14dc3fcf0cbdb41cdf82c0f9e9
Reviewed-on: https://chromium-review.googlesource.com/608836
Reviewed-by: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Commit-Queue: Tommy Martino <tmartino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493098}
Former-commit-id: e08b68a95cc8be2f93bf963dc491837efdcce74b